--- a/src/app/components/WeatherCard/WeatherCard.module.scss
+++ b/src/app/components/WeatherCard/WeatherCard.module.scss
@@ -1,22 +1,10 @@
 $card-width: 9.375rem;
 .weatherCard {
   &Nav {
-      position: relative;
-      top: 0;
-      right: 0;
-      bottom: 0;
-    min-width: $card-width;
-  }
-
-  &Bg {
-    position: absolute;
+    position: relative;
     top: 0;
-    left: 0;
+    right: 0;
     bottom: 0;
-    background: #fff;
-  }
-
-  &Bg {
     min-width: $card-width;
   }
 
@@ -33,7 +21,7 @@ $card-width: 9.375rem;
   &Ul {
     position: absolute;
     top: 7.5rem;
-    right: $card-width - 6.25rem;
+    right: 0;
     min-width: $card-width;
   }
 
@@ -43,6 +31,7 @@ $card-width: 9.375rem;
     display: flex;
     align-items: center;
     cursor: pointer;
+    background-color: white;
   }
 
   &Btn {
@@ -53,7 +42,7 @@ $card-width: 9.375rem;
     -ms-user-select: none;
     cursor: pointer;
     position: relative;
-    width: 6.25rem;
+    width: 100%;
     height: 6.25rem;
     border-radius: 50%;
     background: transparent;
