General layout changes

--- a/src/app/components/ToggleMenu/ToggleMenu.module.scss
+++ b/src/app/components/ToggleMenu/ToggleMenu.module.scss
@@ -30,7 +30,7 @@ $menu-width: 9.375rem;
     margin-bottom: 1.25rem;
     display: flex;
     align-items: center;
-    cursor: pointer;
+    cursor: default;
     background-color: white;
   }
 
