Add basic animation

--- a/src/app/components/PushSwitch/PushSwitch.module.scss
+++ b/src/app/components/PushSwitch/PushSwitch.module.scss
@@ -1,7 +1,8 @@
 $x-y-offset: 0.625rem;
 $blur: 1rem;
 .pushSwitch {
-  height: 100%;
+  position: relative;
+  height: auto;
   width: 100%;
   min-width: 30rem;
   min-height: 30rem;
