--- a/src/app/components/ToggleMenu/ToggleMenu.module.scss
+++ b/src/app/components/ToggleMenu/ToggleMenu.module.scss
@@ -31,6 +31,7 @@ $menu-width: 9.375rem;
     align-items: center;
     cursor: default;
     background-color: white;
+    border-radius: 0.375rem;
   }
 
   &Btn {
