Add Motion card element, solve ToggleMenu ul shown issue

--- a/src/app/components/ToggleMenu/ToggleMenu.module.scss
+++ b/src/app/components/ToggleMenu/ToggleMenu.module.scss
@@ -47,4 +47,10 @@ $menu-width: 9.375rem;
     border-radius: 50%;
     background: transparent;
   }
+  &Show {
+    display: block;
+  }
+  &Hide {
+    display: none;
+  }
 }
